--- a/nablapps/nablaforum/templates/nablaforum/forum.html
+++ b/nablapps/nablaforum/templates/nablaforum/forum.html
@@ -8,144 +8,146 @@
     <link  rel="stylesheet" href="{% static "nablaforum/forum.css" %}">
 {% endaddtoblock %}
 
-<style>
-    .main-grid{
-        height: 950px;
-        margin-bottom: 390px;
-    }
-
-    .grid-item {
-        height: 100%;
-        overflow: auto;
-    }
-</style>
-
-
-<div class="main-grid">
-    <div class="grid-item channel-menu">
-        <h1>Nablaforum</h1>
-        <h4>Velkommen til Nablas interforum! Nedenfor finner du kanalene du med i. Det er kanaler tilhørende dine grupper, felleskanaler, samt kullgruppe og "feeds".</h4>
-
-        <a href={% url "browse-channels" %}><button>Finn nye kanaler</button></a>
-        <a href="{% url "create-channel" %}"><button>Opprett en ny kanal</button></a>
-
-        {# List all channels in the different types of channels #}
-
-        {#
-        {% for channel_type, channel_list in channel_types.items %}
-        <h4>{{ channel_type }}</h4>
-        {% for channel in channel_list %}
-            <a href="{% url "channel-index" channel_id=channel.pk %}">
-            {% include "nablaforum/includes/tiles.html" with object=channel %}
-            </a>
-        {% endfor %}
-        {% endfor %}
-        #}
-
-        <h4> "Feeds" </h4> 
-        {% for channel in feeds %}
-            <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
-            {% include "nablaforum/includes/tiles.html" with object=chan thread_id=1nel %}
-            </a>
-        {% endfor %}
-
-        <h4> Gruppekanaler </h4> 
-        {% for channel in group_channels %}
-            <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
-            {% include "nablaforum/includes/tiles.html" with object=channel %}
-            </a>
-        {% endfor %}
-
-        <h4> Ordinære kanaler </h4> 
-        {% for channel in common_channels %}
-            <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
-            {% include "nablaforum/includes/tiles.html" with object=channel %}
-            </a>
-        {% endfor %}
-
-    </div>
-
-
-    <div class="grid-item channel-threads" >
-        <h1>{{ chosen_channel }}</h1>
-         
-        <p>{{ channel.description }}</p>
-
-        {% if is_paginated %}
-            <span class="current">
-                side {{ threads.number }} av {{ threads.paginator.num_pages }}
-            </span>
-        {% endif %}
-        <br>
-
-        {% if threads.has_next %}
-            <a href="?page={{ threads.next_page_number }}">Hent eldre</a>
-        {% endif %}
-         
-        {% for thread in threads reversed %}
-        <div class="infinite-item">
-            <a href="{% url "forum-main" channel_id=chosen_channel_id thread_id=thread.pk %}?page={{ threads.number }}">
-            {% include "nablaforum/includes/tiles.html" with object=thread %}
-            </a>
+<div class="main-container">
+    <header>
+        <div>
+            <h1>Nablaforum</h1>
         </div>
-        {% endfor %}
 
-        {% if threads.has_previous %}
-            <a href="?page={{ threads.previous_page_number }}">Hent nyere</a>
-        {% endif %}
+        <div>
+            <h1>{{ chosen_channel }}</h1>
+            <p>{{ chosen_channel.description }}</p>
+        </div>
 
-        
-         
-        {% if not channel.is_feed %}
-        <form method="POST">
-            {% csrf_token %}
-            <h4>Ny tråd:</h4>
-        
-            {{ thread_form.as_p }}
-            <button type="submit">Opprett en ny tråd</button>
-        </form>
-        {% endif %}
-    </div>
+        <div>
+            {% if chosen_thread %}
+                <h1>{{ chosen_thread }}</h1>
+            {% else %}
+                <h1>Valgt tråd</h1>
+            {% endif %}
+        </div>
+    </header>
+
+    <div class="main-grid">
+        <div class="grid-item channel-menu">
+
+            <a href={% url "browse-channels" %}><button>Finn nye kanaler</button></a>
+            <a href="{% url "create-channel" %}"><button>Opprett en ny kanal</button></a>
+
+            {# List all channels in the different types of channels #}
+
+            {#
+            {% for channel_type, channel_list in channel_types.items %}
+            <h4>{{ channel_type }}</h4>
+            {% for channel in channel_list %}
+                <a href="{% url "channel-index" channel_id=channel.pk %}">
+                {% include "nablaforum/includes/tiles.html" with object=channel %}
+                </a>
+            {% endfor %}
+            {% endfor %}
+            #}
+
+            <h4> "Feeds" </h4> 
+            {% for channel in feeds %}
+                <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
+                {% include "nablaforum/includes/tiles.html" with object=chan thread_id=1nel %}
+                </a>
+            {% endfor %}
+
+            <h4> Gruppekanaler </h4> 
+            {% for channel in group_channels %}
+                <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
+                {% include "nablaforum/includes/tiles.html" with object=channel %}
+                </a>
+            {% endfor %}
+
+            <h4> Ordinære kanaler </h4> 
+            {% for channel in common_channels %}
+                <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
+                {% include "nablaforum/includes/tiles.html" with object=channel %}
+                </a>
+            {% endfor %}
+
+        </div>
 
 
-    <div class="grid-item thread-messages">
-        <style>
-             .thread{
-                 list-style: none;
-                 padding: 10px;
-             }
-         </style>
-         
-         {% if chosen_thread %} 
-         <h1>{{ chosen_thread }}</h1>
-         
-         <h4>{{ chosen_thread.threadstarter.get_full_name }} skriver:</h4>
-         <div class="des">
-             {{ chosen_thread.text }}
-             <br>
-             <br>
-             <div style="text-align: right;">{{ chosen_thread.created }}</div>
-         </div>
-         
-         {% for message in messages %}
-             <div class="well">
-                 <h4>{{ message.user.get_full_name }}</h4>
-                 <p>{{ message.message }}</p>
-                 <div style="text-align: right;">{{ message.created }}</div>
+        <div class="grid-item channel-threads" >
+            {% if is_paginated %}
+                <span class="current">
+                    side {{ threads.number }} av {{ threads.paginator.num_pages }}
+                </span>
+            {% endif %}
+            <br>
+
+            {% if threads.has_next %}
+                <a href="?page={{ threads.next_page_number }}">Hent eldre</a>
+            {% endif %}
+             
+            {% for thread in threads reversed %}
+            <div class="infinite-item">
+                <a href="{% url "forum-main" channel_id=chosen_channel_id thread_id=thread.pk %}?page={{ threads.number }}">
+                {% include "nablaforum/includes/tiles.html" with object=thread %}
+                </a>
+            </div>
+            {% endfor %}
+
+            {% if threads.has_previous %}
+                <a href="?page={{ threads.previous_page_number }}">Hent nyere</a>
+            {% endif %}
+
+            
+             
+            {% if not channel.is_feed %}
+            <form method="POST">
+                {% csrf_token %}
+                <h4>Ny tråd:</h4>
+            
+                {{ thread_form.as_p }}
+                <button type="submit">Opprett en ny tråd</button>
+            </form>
+            {% endif %}
+        </div>
+
+
+        <div class="grid-item thread-messages">
+            <style>
+                 .thread{
+                     list-style: none;
+                     padding: 10px;
+                 }
+             </style>
+             
+             {% if chosen_thread %} 
+
+             
+             <h4>{{ chosen_thread.threadstarter.get_full_name }} skriver:</h4>
+             <div class="des">
+                 {{ chosen_thread.text }}
+                 <br>
+                 <br>
+                 <div style="text-align: right;">{{ chosen_thread.created }}</div>
              </div>
-         {% endfor %}
-         
-         <h4>Ny medling:</h4>
-         <form method="POST">
-             {% csrf_token %}
-             {{ message_form.as_p }}
-             <button type="submit">send</button>
-         </form>
-         {% else %}
-         <div class="well">
-            <h1>Trykk på en tråd for å lese meldinger</h1>
-         </div>
-         {% endif %}
+             
+             {% for message in messages %}
+                 <div class="well">
+                     <h4>{{ message.user.get_full_name }}</h4>
+                     <p>{{ message.message }}</p>
+                     <div style="text-align: right;">{{ message.created }}</div>
+                 </div>
+             {% endfor %}
+             
+             <h4>Ny medling:</h4>
+             <form method="POST">
+                 {% csrf_token %}
+                 {{ message_form.as_p }}
+                 <button type="submit">send</button>
+             </form>
+             {% else %}
+             <div class="well">
+                <h1>Trykk på en tråd for å lese meldinger</h1>
+             </div>
+             {% endif %}
+        </div>
     </div>
 </div>
 {% endblock full-content-body %}
