--- a/nablapps/nablaforum/templates/nablaforum/forum.html
+++ b/nablapps/nablaforum/templates/nablaforum/forum.html
@@ -34,19 +34,6 @@
             <a href={% url "browse-channels" %}><button>Finn nye kanaler</button></a>
             <a href="{% url "create-channel" %}"><button>Opprett en ny kanal</button></a>
 
-            {# List all channels in the different types of channels #}
-
-            {#
-            {% for channel_type, channel_list in channel_types.items %}
-            <h4>{{ channel_type }}</h4>
-            {% for channel in channel_list %}
-                <a href="{% url "channel-index" channel_id=channel.pk %}">
-                {% include "nablaforum/includes/tiles.html" with object=channel %}
-                </a>
-            {% endfor %}
-            {% endfor %}
-            #}
-
             <h4> "Feeds" </h4> 
             {% for channel in feeds %}
                 <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
@@ -71,7 +58,7 @@
         </div>
 
 
-        <div class="grid-item channel-threads" >
+        <div class="grid-item channel-threads" id="viewed-threads">
             {% if is_paginated %}
                 <span class="current">
                     side {{ threads.number }} av {{ threads.paginator.num_pages }}
@@ -150,4 +137,13 @@
         </div>
     </div>
 </div>
+
+<script>
+    var d = $('#viewed-threads');
+    d.scrollTop(d.prop("scrollHeight"));
+</script>
+
 {% endblock full-content-body %}
+
+
+
