--- a/nablapps/nablaforum/templates/nablaforum/forum.html
+++ b/nablapps/nablaforum/templates/nablaforum/forum.html
@@ -37,7 +37,7 @@
             <h4> "Feeds" </h4> 
             {% for channel in feeds %}
                 <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
-                {% include "nablaforum/includes/tiles.html" with object=chan thread_id=1nel %}
+                {% include "nablaforum/includes/tiles.html" with object=channel thread_id=1nel %}
                 </a>
             {% endfor %}
 
@@ -71,11 +71,9 @@
             {% endif %}
              
             {% for thread in threads reversed %}
-            <div class="infinite-item">
                 <a href="{% url "forum-main" channel_id=chosen_channel_id thread_id=thread.pk %}?page={{ threads.number }}">
                 {% include "nablaforum/includes/tiles.html" with object=thread %}
                 </a>
-            </div>
             {% endfor %}
 
             {% if threads.has_previous %}
@@ -112,7 +110,13 @@
                  {{ chosen_thread.text }}
                  <br>
                  <br>
-                 <div style="text-align: right;">{{ chosen_thread.created }}</div>
+                 <div style="text-align: right; margin-bottom: 5px">{{ chosen_thread.created }}</div>
+                 <div style="text-align: right;" onclick="show_readers()" id="toggle_seen">Trykk for å vise seere</div>
+                 <div id="readers" style="display: none">
+                     {% for read in first_message.read_by_user.all %}
+                     {{ read }}
+                     {% endfor %}
+                 </div>
              </div>
              
              {% for message in messages %}
@@ -141,6 +145,19 @@
 <script>
     var d = $('#viewed-threads');
     d.scrollTop(d.prop("scrollHeight"));
+
+    function show_readers() {
+        var readers = document.getElementById("readers");
+        var toggle = document.getElementById("toggle_seen");
+        if (readers.style.display == "none") {
+            readers.style.display = "block"
+            toggle_seen.innerHTML = "Trykk for å skjule seere"
+        }
+        else {
+            readers.style.display = "none";
+            toggle_seen.innerHTML = "Trykk for å hvise seere"
+        }
+    }
 </script>
 
 {% endblock full-content-body %}
