--- a/nablapps/nablaforum/templates/nablaforum/forum.html
+++ b/nablapps/nablaforum/templates/nablaforum/forum.html
@@ -41,6 +41,13 @@
                 </a>
             {% endfor %}
 
+            <h4>Kullgruppe</h4>
+            {% for channel in class_channel %}
+                <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
+                {% include "nablaforum/includes/tiles.html" with object=channel %}
+                </a>
+            {% endfor %}
+
             <h4> Gruppekanaler </h4> 
             {% for channel in group_channels %}
                 <a href="{% url "forum-main" channel_id=channel.pk thread_id=0 %}">
@@ -88,7 +95,7 @@
 
             
              
-            {% if not channel.is_feed %}
+            {% if not chosen_channel.is_feed %}
             <form method="POST">
                 {% csrf_token %}
                 <h4>Ny tråd:</h4>
