Moves links around the page from calendar to event main page

--- a/templates/base.html
+++ b/templates/base.html
@@ -158,7 +158,7 @@
                         {% block navbar_container %}
                         {# navigasjonslenker #}
                         <ul class="nav navbar-nav">
-                            <li><a href="{% url "event_list" %}">Arrangementer</a></li>
+                            <li><a href="{% url "event_main_page" %}">Arrangementer</a></li>
                             <li><a href="{% url "jobs_list" %}">Karriere</a></li>
 
                             <li class="dropdown">
