--- a/nablapps/events/static/events/event_main_page.css
+++ b/nablapps/events/static/events/event_main_page.css
@@ -52,6 +52,8 @@
     display: inline-block;
     /*         float: right;*/
     margin-right: 12px;
+    color: gray;
+    font-size: medium;
 }
 
 .month__name {
