Various minor updates regarding style and display of forum content

--- a/nablapps/nablaforum/static/nablaforum/forum.css
+++ b/nablapps/nablaforum/static/nablaforum/forum.css
@@ -53,8 +53,10 @@ header {
     margin: 0;
 }   
 
-.content{
+.content {
     color: black;
+    width: 100%;
+    word-wrap: break-word;
 }
 
 .meta{
