--- a/nablapps/nablaforum/templates/nablaforum/forum.html
+++ b/nablapps/nablaforum/templates/nablaforum/forum.html
@@ -127,7 +127,7 @@
                  <div style="text-align: right;" onclick="show_readers()" id="toggle_seen">Trykk for å vise seere</div>
                  <div id="readers" style="display: none">
                      {% for read in first_message.read_by_user.all %}
-                     {{ read.get_full_name }}
+                     {{ read.get_full_name }}, 
                      {% endfor %}
                  </div>
              </div>
@@ -168,7 +168,7 @@
         }
         else {
             readers.style.display = "none";
-            toggle_seen.innerHTML = "Trykk for å hvise seere"
+            toggle_seen.innerHTML = "Trykk for å vise seere"
         }
     }
 </script>
