Removed an s in bedpress in event penalty system

--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -132,7 +132,7 @@
     <tr>
         <td>Prikkreglement</td>
         {% if event.penalty == 1%}
-        <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/' %}>Bedpress</td>
+        <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/' %}>Bedpres</td>
         {% endif %}
         {% if event.penalty == 2%}
         <td><a href={% url 'wiki:get' 'retningslinjer-arrangement/' %}>Arrangement med betaling</td>
