Adds eurekakom and kontorkom emails to contact page.
Also adds notice for companies to contact BN

--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -6,6 +6,16 @@
 
 <h1>Kontakt</h1>
 
+<div>
+    <h3>For bedriftshenvendelser</h3>
+    <p>
+    Kontakt bedriftskontakten på <a href="mailto:bedkom@nabla.ntnu.no">bedkom@nabla.ntnu.no</a>.
+    <br>
+    Ev. <a href="mailto:eureka@nabla.ntnu.no">eureka@nabla.ntnu.no</a> for henvendelser vedrørende <b>karrieredagen Eureka.</b>
+    </p>
+</div>
+
+
 <h3>Kontaktinfo til styret</h3>
 
 <table class="table table-striped table-bordered" style="width:100%">
