--- a/nablapps/apply_committee/templates/apply_committee/apply.html
+++ b/nablapps/apply_committee/templates/apply_committee/apply.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 
 {% block main %}
-{% if form %}
+{% if application_round %}
 <form method="post">
     {% csrf_token %}
-    {% for form in form %}
+    {% for form in formset %}
     {{ form }} <br />
     {% endfor %}
+    {{ formset.management_form }}
     <input type="submit" />
 </form>
 {% else %}
