Show non-form errors in the template

--- a/nablapps/apply_committee/templates/apply_committee/apply.html
+++ b/nablapps/apply_committee/templates/apply_committee/apply.html
@@ -4,6 +4,7 @@
 {% if application_round %}
 <form method="post">
     {% csrf_token %}
+    {{ formset.non_form_errors }}
     {% for form in formset %}
     {{ form }} <br />
     {% endfor %}
