--- a/nablapps/events/templates/events/includes/upcoming_events.html
+++ b/nablapps/events/templates/events/includes/upcoming_events.html
@@ -4,7 +4,7 @@
 {% endaddtoblock %}
 
 <h3>Kommende arrangementer</h3>
-<div class="well upcoming"><!-- kommende arrangement -->
+<div class="card card-body bg-light upcoming"><!-- kommende arrangement -->
     <ul class="nav">
         {% for event in upcoming_events %}
             <li>
