--- a/nablapps/interactive/templates/interactive/quiz_include.html
+++ b/nablapps/interactive/templates/interactive/quiz_include.html
@@ -5,7 +5,7 @@
 <div class="alert alert-warning alert-dismissible">Dette er bare synlig fordi du har riktige rettigheter</div>
 {% endif %}
 {% if quiz.is_timed %}
-<div class="float-left well">
+<div class="float-left card card-body bg-light">
     <h2>Tid igjen</h2>
     <div class="countdown"></div>
     <script>
