--- a/nablapps/meeting_records/templates/meeting_records/meeting_record_detail.html
+++ b/nablapps/meeting_records/templates/meeting_records/meeting_record_detail.html
@@ -31,7 +31,7 @@
     {% if user.is_authenticated %}
         {% render_comment_form for meeting_record %}
     {% else %}
-        <p class="well">Logg inn for å skrive en kommentar</p>
+        <p class="card card-body bg-light">Logg inn for å skrive en kommentar</p>
     {% endif %}
 {# end Comments #}
 
