--- a/nablapps/poll/templates/poll/poll_list.html
+++ b/nablapps/poll/templates/poll/poll_list.html
@@ -36,7 +36,7 @@ Mine avstemninger
 </h3>
 
 {% endwith%}
-<div class="poll well">
+<div class="card card-body bg-light">
     <span id="{{ poll.id }}"></span>
     <h4>{{ poll.question }}</h4>
     {% if poll.voted %}
