--- a/templates/base.html
+++ b/templates/base.html
@@ -23,13 +23,16 @@
 
         <!-- Bootstrap Core CSS -->
         {% addtoblock "css" %}
-        <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap.min.css" %}">
-        <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap-theme.min.css" %}">
+{#        <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap.min.css" %}">#}
+{#        <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap-theme.min.css" %}">#}
         <link rel="stylesheet" href="{% static "@fortawesome/fontawesome-free/css/v4-shims.min.css" %}">
         <link rel="stylesheet" href="{% static "@fortawesome/fontawesome-free/css/fontawesome.min.css" %}">
         <link rel="stylesheet" href="{% static "@fortawesome/fontawesome-free/css/brands.min.css" %}">
         <link rel="stylesheet" href="{% static "@fortawesome/fontawesome-free/css/solid.min.css" %}">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
         <link href="{% static "css/default.css" %}" rel="stylesheet">
+
         {% if custom_color %}
         <style>
          nav.navbar {
@@ -268,7 +271,6 @@
 
         <div class="container box" id = "mainContent">
 
-            {% bootstrap_messages %}
             {% block main %}
             <div class="row">
                 <!-- Blog Entries Column -->
