--- a/templates/old-front_page.html
+++ b/templates/old-front_page.html
@@ -34,7 +34,7 @@
 </article>
 {% endwith %}
 
-<div class="well">
+<div class="card card-body bg-light">
     {% include "includes/event_widget.html" %}
 </div>
 
@@ -89,7 +89,7 @@
   <li><a data-toggle="tab" href="#Podcast">Skråttcast</a></li>
 </ul>
 
-<div height=300px class="well">
+<div height=300px class="card card-body bg-light">
     <div class="tab-content fixed-tab-height">
         <div  id="Nablad" class="tab-pane fade in active">
             <h3><a href="{% url "nablad_list" %}">Siste Nablad</a></h3>
@@ -133,7 +133,7 @@
 
 
 {% block sidebar %}
-    <div class="well" style="min-height: 410px;">
+    <div class="card card-body bg-light" style="min-height: 410px;">
         <h1>Velkommen til Nabla</h1>
         <p>
             Nabla er linjeforeningen for sivilingeniørstudiet Fysikk og Matematikk ved NTNU, og har som formål
