--- a/nablapps/com/templates/com/com_details.html
+++ b/nablapps/com/templates/com/com_details.html
@@ -57,13 +57,13 @@
 <ul class="nav nav-pills nav-stacked">
 {% for c in compages %}
     {% if not c.is_interest_group %}
-    <li class="panel-title"><a href="{{ c.get_absolute_url }}">{{ c.com.name }}</a></li>
+    <li class="card-title"><a href="{{ c.get_absolute_url }}">{{ c.com.name }}</a></li>
     {% endif %}
 {% endfor %}
 <h3>Interessegrupper</h3>
 {% for c in compages %}
     {% if c.is_interest_group %}
-    <li class="panel-title"><a href="{{ c.get_absolute_url }}">{{ c.com.name }}</a></li>
+    <li class="card-title"><a href="{{ c.get_absolute_url }}">{{ c.com.name }}</a></li>
     {% endif %}
 {% endfor %}
 </ul>
