Change logo in admin to svg and remove some orphaned pngs

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -7,7 +7,7 @@
 {% block branding %}
     <h1 id="site-name">
         <a href="/">
-            <img height="30" src="{% static "img/nabla_logo_white.png" %}" alt="Nabla">
+            <img height="30" src="{% static "img/nabla_logo_white.svg" %}" alt="Nabla">
         </a>
     </h1>
 {% endblock %}
