--- a/nablapps/apply_committee/templates/apply_committee/admin_application_list.html
+++ b/nablapps/apply_committee/templates/apply_committee/admin_application_list.html
@@ -10,5 +10,15 @@
 {% endblock %}
 
 {% block applicant_info %}
-<li>{{ application.applicant.get_full_name }}{% if application.anonymous %} <i>(Anonym søknad)</i>{% endif %}</li>
+<style>
+ .application_text {
+     margin-left: 10px;
+     border-left: 4px solid #989898;
+     padding-left: 3px;
+ }
+</style>
+<li>
+    {{ application.applicant.get_full_name }}{% if application.anonymous %} <i>(Anonym søknad)</i>{% endif %}
+    {% if application.application_text %}<div class="application_text">{{ application.application_text }}</div>{% endif %}
+</li>
 {% endblock %}
